fix: increase selector specificity to resolve false positive contrast flag on sr-only caption

--- a/scss/libguides/_footer.scss
+++ b/scss/libguides/_footer.scss
@@ -81,10 +81,6 @@
     color: #ffffff !important;
     }
 
-    caption.sr-only { 
-    color:#ffffff !important;
-    }
-
     .s-lc-w-sr-only {
       position: absolute;
       width: 1px;
