--- a/scss/libguides/_home.scss
+++ b/scss/libguides/_home.scss
@@ -66,3 +66,7 @@
     vertical-align: sub;
   }
 }
+
+#api_hours_today_iid3271_lid0 caption.sr-only { 
+    color:#ffffff !important;
+    }
